5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1585_825.log
== TEST (2019-03-24 21:56:07) 
-- CODE:
raio=int(input());
import math
area=pi*raio**2;
volume=4/3*pi*raio***3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
File "XXXX", line 4
    volume=4/3*pi*raio***3;
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:56:29) 
-- CODE:
raio=int(input());
import math from pi 
area=pi*raio**2;
volume=4/3*pi*raio***3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
File "XXXX", line 2
    import math from pi 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:57:15) 
-- CODE:
raio=int(input());
from math import pi  
area=pi*raio**2;
volume=4/3*pi*raio***3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
File "XXXX", line 4
    volume=4/3*pi*raio***3;
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:57:38) 
-- CODE:
raio=int(input());
from math import pi  
area= pi*raio**2;
volume=4/3*pi*raio***3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
File "XXXX", line 4
    volume=4/3*pi*raio***3;
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:57:56) 
-- CODE:
raio=int(input());
from math import pi  
area= pi*raio**2;
volume= 4/3*pi*raio***3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
File "XXXX", line 4
    volume= 4/3*pi*raio***3;
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:58:14) 
-- CODE:
raio=int(input());
from math import pi  
area= pi*raio**2;
from math import pi
volume= 4/3*pi*raio***3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
File "XXXX", line 5
    volume= 4/3*pi*raio***3;
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:58:56) 
-- CODE:
raio=int(input());
from math import all 
area= pi*raio**2;
volume= 4/3*pi*raio***3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
File "XXXX", line 4
    volume= 4/3*pi*raio***3;
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:59:18) 
-- CODE:
raio=int(input());
from math import all 
area=pi*raio**2;
volume=(4/3)*pi*raio***3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
File "XXXX", line 4
    volume=(4/3)*pi*raio***3;
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:59:29) 
-- CODE:
raio=int(input());
from math import all 
area=pi*raio**2;
volume=(4/3)*pi*raio**3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=int(input());
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:59:52) 
-- CODE:
raio=int(input());
from math import * 
area=pi*raio**2;
volume=(4/3)*pi*raio**3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=int(input());
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 22:00:06) 
-- CODE:
raio=int(input());
from math import * 
area=pi*raio**2;
volume=(4/3)*pi*raio**3;
print(round(area,3));
print(round(volume,3));
-- EXECUTION TIME:
0.145241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 1, in <module>
    raio=int(input());
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:00:47) 
-- CODE:
raio=int(input());
from math import * 
area=pi*raio**2;
volume=(4/3)*pi*raio**3;
print(round(area,3));
print(round(volume,3));
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=int(input());
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 22:01:14) 
-- CODE:
raio=float(input());
from math import * 
area=pi*raio**2;
volume=(4/3)*pi*raio**3;
print(round(area,3));
print(round(volume,3));
-- EXECUTION TIME:
0.185784
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
